--- a/postApp/pom.xml
+++ b/postApp/pom.xml
@@ -57,6 +57,14 @@
 			<artifactId>json</artifactId>
 			<version>20210307</version>  <!-- You can adjust to the latest version -->
 		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.1.0</version> <!-- Use the latest stable version -->
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
